# mongo_helper

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/source/: conf.py
mongohelper/: __init__.py  mongom.py
mongom/: __init__.py  mongom.py
src/: README.md
src/mongo_helper/: __init__.py  client_adapter.py  client_spawner.py  helper.py  operators.py  query_builder.py  query_builder_pydantic.py
src/mongom/: mongom.py
